syntax = "proto3";

option csharp_namespace = "Meetup.GroupManagement.Contracts.Queries.V1";
package meetup.groupmanagement;

import "google/protobuf/timestamp.proto";

service MeetupGroupQueries{
  rpc Get(GetGroup) returns (GetGroup.GetGroupReply);
}

message GetGroup{
  oneof id {
    string group_slug = 1;
    string group_id = 2;
  }
  message GetGroupReply {
    Group group = 1;
  }
  message Group{
    string id = 1;
    string slug = 2;
    string title = 3;
    string description = 4;
    string organizer_id = 5;
    repeated Member members = 6;
  }
  message Member{
    string user_id = 1;
    google.protobuf.Timestamp joined_at = 2;
  }
}
